--- a/react_template/src/components/common/header.css
+++ b/react_template/src/components/common/header.css
@@ -39,19 +39,19 @@ nav .logo-wrapper .round-dot {
   background: indigo;
 }
 
-nav .logo-wrapper .logo-text {
+/* nav .logo-wrapper .logo-text {
   color: #fff;
   font-size: 1.125rem;
-}
+} */
 
 /* nav .nav-wrapper {
   display: flex;
   gap: 12px;
 } */
 
-nav .nav-wrapper a {
+/* nav .nav-wrapper a {
   color: #fff;
-}
+} */
 
 /* nav .info-wrapper {
   display: flex;
