--- a/react_template/src/index.css
+++ b/react_template/src/index.css
@@ -15,7 +15,7 @@ body {
 }
 
 .container {
-  padding: 1rem;
+  padding: 1rem 2rem;
   width: 100%;
   margin: auto;
   max-width: 1280px;
@@ -44,4 +44,5 @@ footer ul a {
 footer ul a:hover {
   color: #fff;
 }
+
 
